# LoFonic_desktop

./: .gitignore  1_PROJECT_OVERVIEW.md  3_DESKTOP_DESIGN_SYSTEM.md  Cargo.toml
docs/: MVP_BACKEND_INTEGRATION.md  MVP_STRUCTURE.md  MVP_UI_WORKFLOW.md
proto/: desktop_api.proto
src/: main.rs
src/desktop/: mod.rs
src/desktop/app/: mod.rs
src/desktop/assets/: mod.rs
src/desktop/components/: mod.rs
src/desktop/grpc/: mod.rs
src/desktop/playback/: mod.rs
src/desktop/screens/: mod.rs
src/desktop/state/: mod.rs
src/desktop/theme/: mod.rs
src/desktop/widgets/: mod.rs
