[package]
name = "lofonic-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
eframe = { version = "0.34.2", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.34.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt", "sync"] }
tonic = { version = "0.14.6", default-features = false, features = ["transport"] }
